[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/PauseUI.gd" type="Script" id=1]
[ext_resource path="res://UI/button-pressed.png" type="Texture" id=2]
[ext_resource path="res://UI/button.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Fonts/KenneyMini.ttf"

[sub_resource type="DynamicFont" id=2]
size = 7
extra_spacing_top = -2
font_data = SubResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 7
extra_spacing_top = -2
font_data = SubResource( 1 )

[node name="PauseUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 16.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 32.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SaveButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.5
margin_top = -3.5
margin_right = 10.5
margin_bottom = 3.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Respawn" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 32.0
margin_bottom = 36.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Respawn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -3.5
margin_right = 18.0
margin_bottom = 3.5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Spawn"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 32.0
margin_bottom = 56.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -3.0
margin_right = 11.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Respawn" to="." method="_on_Respawn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
